# NorgMaestro

./: .gitignore  CeorgLsp.csproj  LanguageServer.cs  LspServer.cs  Makefile  NorgMaestro.sln  Program.cs  README.md  State.cs  log.txt  lsp-test.lua  message.rpc  pyproject.toml  rpc-message  todos.txt
CeorgLsp/: DecodeMessage.cs  Program.cs
Methods/: CantHandler.cs  Completion.cs  DidSaveHandler.cs  EmptyHandler.cs  HandlerFactory.cs  HandlerInterface.cs  IncomingCalls.cs  IncomingCallsHandler.cs  Initialize.cs  InitializeHandler.cs  NoneHandler.cs  PrepareCallHierarchy.cs  References.cs  ReferencesHandler.cs  RenameHandler.cs  Shutdown.cs  WorkspaceSymbol.cs  WorkspaceSymbolHandler.cs
NorgMaestro.Server/: LanguageServer.cs  LanguageServerState.cs  NorgMaestro.Server.csproj  Program.cs  State.cs  lsp-test.lua  rpc-message
NorgMaestro.Tests/: CodeActionHandlerTests.cs  CompletionHandlerTests.cs  CompletionSerializationTests.cs  DefinitionHandlerTests.cs  DidChangeHandlerTests.cs  DidCloseHandlerTests.cs  DidOpenHandlerTests.cs  DocumentLinkHandlerTests.cs  DocumentSymbolHandlerTests.cs  ExecuteCommandHandlerTests.cs  HandlerFactoryTests.cs  HoverHandlerTests.cs  IncomingCallsHandlerTests.cs  InitializeHandlerTests.cs  LanguageServerStateDiagnosticsTests.cs  NorgMaestro.Tests.csproj  OutgoingCallsHandlerTests.cs  PrepareCallHierarchyHandlerTests.cs  PrepareRenameHandlerTests.cs  ReferencesHandlerTests.cs  RenameHandlerTests.cs  RpcReaderTests.cs  RpcWriterTests.cs  UnitTest1.cs  WorkspaceSymbolHandlerTests.cs
Parser/: Parse.cs
Rpc/: BaseDocumentObjects.cs  (+12 more)
(+117 files in other folders)
