[tool.poetry]
name = "neorg-lsp"
version = "0.1.0"
description = ""
authors = ["Michael Damsbo Lyngs <michael_lyngs@outlook.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
tree-sitter = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
